--- a/Ujjwal_Project/app/src/main/res/values/colors.xml
+++ b/Ujjwal_Project/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#ff0000</color>
     <color name="colorPrimaryDark">#ff0000</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="black">#000000</color>
+    <color name="black_25_transparent">#40000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
