--- a/Ujjwal_Project/app/src/main/res/values/dimens.xml
+++ b/Ujjwal_Project/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="pad16">16dp</dimen>
+    <dimen name="text16">16sp</dimen>
+    <dimen name="text18">18sp</dimen>
 </resources>
