Added buttons for experince

--- a/Ujjwal_Project/app/src/main/res/layout/content_main.xml
+++ b/Ujjwal_Project/app/src/main/res/layout/content_main.xml
@@ -1,13 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.air.myapplication.activities.MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin30"
+        android:gravity="center"
+        android:padding="@dimen/pad16"
+        android:text="Before the Travel" />
 
-</FrameLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin30"
+        android:gravity="center"
+        android:padding="@dimen/pad16"
+        android:text="During the Travel and" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin30"
+        android:gravity="center"
+        android:padding="@dimen/pad16"
+        android:text="After Travel" />
+
+</LinearLayout>
