--- a/Ujjwal_Project/app/src/main/res/values/dimens.xml
+++ b/Ujjwal_Project/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="pad16">16dp</dimen>
     <dimen name="text16">16sp</dimen>
     <dimen name="text18">18sp</dimen>
+    <dimen name="margin30">30dp</dimen>
 </resources>
